# unicorn-fy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASKS.md  environment.yml  llms.txt  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_unicorn_fy.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_wheels.yml  unit-tests.yml
dev/: set_version_config.txt  test_stream_everything_and_unicorn_fy.py
dev/sphinx/source/: changelog.md  conf.py  readme.md  security.md
docs/: .buildinfo  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_fy.html
docs/_modules/: index.html
docs/_modules/unicorn_fy/: unicorn_fy.html
docs/_sources/: changelog.md.txt  readme.md.txt
examples/: README.md
unicorn_fy/: unicorn_fy.py
