[tool.poetry]
name = "unicorn-fy"
version = "0.17.1"
description = "Normalizes raw responses from crypto exchange APIs (Binance & co.) into consistent, cleanly-typed Python dictionaries. A transformation layer that makes exchange data interchangeable instead of exchange-specific."
authors = ["Oliver Zehentleitner"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oliver-zehentleitner/unicorn-fy"
documentation = "https://oliver-zehentleitner.github.io/unicorn-fy"
repository = "https://github.com/oliver-zehentleitner/unicorn-fy"

[tool.poetry.urls]
'Howto' = 'https://github.com/oliver-zehentleitner/unicorn-fy'
'Documentation' = 'https://oliver-zehentleitner.github.io/unicorn-fy'
'Wiki' = 'https://github.com/oliver-zehentleitner/unicorn-fy/wiki'
'Author' = 'https://www.linkedin.com/in/oliver-zehentleitner'
'Changes' = 'https://oliver-zehentleitner.github.io/unicorn-fy/changelog.html'
'License' = 'https://oliver-zehentleitner.github.io/unicorn-fy/license.html'
'Issue Tracker' = 'https://github.com/oliver-zehentleitner/unicorn-fy/issues'
'Telegram' = 'https://t.me/unicorndevs'

[tool.poetry.dependencies]
python = ">=3.9.0"
Cython = "*"
requests = "*"
orjson = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip", "mypy"]
build-backend = "setuptools.build_meta"

[tool.poetry.package_data]
unicorn_fy = ["*.so", "*.dll", "*.py", "*.pyd", "*.pyi"]
